--- a/scGlamLiFF/index.html
+++ b/scGlamLiFF/index.html
@@ -5,9 +5,32 @@
     <link rel="icon" href="/src/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LIFF App</title>
+    <style>
+      #boot-status {
+        font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", sans-serif;
+        padding: 24px;
+        color: #2a2a2a;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
+    <div id="boot-status">Loading...</div>
+    <script>
+      window.__SCGLAM_BOOT__ = { htmlLoaded: true, jsStarted: false };
+      const bootEl = document.getElementById("boot-status");
+      if (bootEl) {
+        bootEl.textContent = "HTML loaded. Waiting for app...";
+      }
+      setTimeout(() => {
+        if (!window.__SCGLAM_BOOT__ || !window.__SCGLAM_BOOT__.jsStarted) {
+          if (bootEl) {
+            bootEl.textContent =
+              "App failed to start. Please refresh or check network.";
+          }
+        }
+      }, 5000);
+    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
