--- a/scGlamLiFF/index.html
+++ b/scGlamLiFF/index.html
@@ -7,9 +7,18 @@
     <title>LIFF App</title>
     <style>
       #boot-status {
+        position: fixed;
+        inset: 0;
+        z-index: 9999;
+        background: rgba(255, 255, 255, 0.95);
         font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", sans-serif;
         padding: 24px;
         color: #2a2a2a;
+        font-size: 16px;
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        white-space: pre-wrap;
       }
     </style>
   </head>
